--- a/src/components/ShowsSection/ShowsSection.module.css
+++ b/src/components/ShowsSection/ShowsSection.module.css
@@ -8,6 +8,7 @@
 .slide {
   flex: 0 0 calc(100% / 4 - 16px * 3 / 4);
   min-width: 0;
+  margin-inline-start: 16px;
 }
 
 .card {
